# LirenaStream

./: .gitignore  README.md  machineSetupLog.sh
LirenaAcquire/: meson.build
LirenaAcquire/include/: LirenaConfig.h
LirenaAcquire/scripts/: downLoadAndViewPhotosFromJetson_0.sh  launchLirenaAcquire.sh  playbackMpegTsFile.sh  playbackMpegTsFile_onJetson.sh  playbackMpegTsFile_onX86_NvDec.sh  playbackMpegTsFile_onX86_software.sh  receiveUdpMpegTs.sh  receiveUdpMpegTs_nvDec.sh  sshToJetson_0.sh
LirenaAcquire/src/: LirenaHackStreamer.cpp
LirenaCapture/: meson.build
LirenaCapture/include/: Lirena.h  LirenaCamera.h  LirenaCaptureApp.h  LirenaCaptureDisplay.h  LirenaCaptureDisplayController.h  LirenaConfig.h  LirenaFrameQueue.h  LirenaKLVappsrc.h  LirenaStreamer.h  LirenaXimeaStreamer.h
LirenaCapture/include/LirenaCaptureDevice/: LirenaCaptureDevice.h
LirenaCapture/include/LirenaCaptureUI/: LirenaCaptureUI.h
LirenaCapture/scripts/: launchLirenaCapture.sh  launchLirenaCapture.sh~  playbackMpegTsFile.sh  receiveUdpMpegTs.sh  sendUdpMpegTs.sh
LirenaCapture/src/: LirenaCamera.cpp  LirenaCaptureApp.cpp  LirenaCaptureDisplay.cpp  LirenaCaptureDisplayController.cpp  LirenaConfig.cpp  LirenaKLVappsrc.cpp  LirenaStreamer.cpp  LirenaXimeaStreamer.cpp
LirenaCapture/src/LirenaCaptureDevice/: LirenaCaptureDevice.cpp
LirenaCapture/src/LirenaCaptureUI/: LirenaCaptureUI.cpp
playground/bash/: gst_klv_snippets.sh  jetson4kOnlyShow.sh  jetson4kReplay.sh  jetson4kSnippets.sh  jetson4ksnippets.sh  jetsonStreamingSnippets.sh  nvvidconv_debugging.sh
playground/magewell_capture_example/: Makefile  meson.build
playground/magewell_capture_example/src/: CaptureByInput.cpp
playground/streamViewer_extended/: meson_options.txt
playground/streamViewer_extended/include/: LirenaCaptureDisplayController.h  LirenaXimeaStreamer.h
playground/streamViewer_extended/scripts/: playbackMpegTsFile.sh  receiveUdpMpegTs.sh  sendUdpMpegTs.sh
playground/streamViewer_extended/src/: LirenaCaptureApp.cpp  LirenaConfig.cpp  LirenaXimeaStreamer.cpp
playground/ximeaNvEnc/: Makefile
playground/ximea_example_nvenc/: gstPipeSnippets.sh  streamViewer.cpp
playground/ximea_opencv_cuda_demosaic/: Makefile  launchOcvDemosaic.sh  meson.build  ocvDemosaic.cpp
playground/ximea_opencv_cuda_demosaic/include/: LirenaHackStreamer.h  LirenaHackXimeaCamera.h
playground/ximea_opencv_cuda_demosaic/scripts/: playbackMpegTsFile.sh
playground/ximea_opencv_cuda_demosaic/src/: LirenaHackStreamer.cpp  LirenaHackXimeaCamera.cpp
ximeaJetsonStream/: meson.build
ximeaJetsonStream/include/: KLV_appsrc.h  LirenaOptions.h  StreamViewerGUI.h
ximeaJetsonStream/src/: KLV_appsrc.cpp  LirenaOptions.cpp  StreamViewerGUI.cpp  ximeaJetsonStream.cpp
